syntax = "proto3";

option java_package = "ir.ms.pb";
//option java_outer_classname = "PB2";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;

option go_package = "x";

import "pb_enums.proto";
import "pb_views.proto";

// AddNewMessage
message PB_ChatParam_AddNewMessage {
    int64 ReplyToMessageId = 10;
    // PB_MessageForwardedFrom Forward = 14;
    bytes Blob = 17;
    PB_MessageView MessageView = 19;
}

message PB_ChatResponse_AddNewMessage {
    string MessageKey =1;
    int64 NewMessageId =2;
    string MessageFileKey =3;
    int64 NewMessageFileId =4;
    int64 AtTime =5;
}

// SetRoomActionDoing
message PB_ChatParam_SetRoomActionDoing {
    int64 GroupId = 12;
    string DirectRoomKey = 102;
    RoomActionDoingEnum ActionType = 1020;
}
message PB_ChatResponse_SetRoomActionDoing{
}

/////////
message PB_ChatParam_SetChatMessagesRangeAsSeen {
    string ChatKey = 1;
    int64 BottomMessageId = 2;
    int64 TopMessageId = 3;
    int64 SeenTimeMs = 4;
}
message PB_ChatResponse_SetChatMessagesRangeAsSeen {

}

/////////////////////////////////////
message PB_ChatParam_DeleteChatHistory {//d+g
    string ChatKey = 1;
    int64 FromMessageId = 2;//must persent
}
message PB_ChatResponse_DeleteChatHistory {

}

/////////////////////////////////////
message PB_ChatParam_DeleteMessagesByIds {
    string ChatKey = 1;
    bool Both = 2;
    repeated int64 MessagesIds = 10;
}
message PB_ChatResponse_DeleteMessagesByIds {

}

/////////////////////////////////////
message PB_ChatParam_SetMessagesAsReceived {
    string ChatRoom = 1;
    repeated int64 MessageIds = 3;
}
message PB_ChatResponse_SetMessagesAsReceived {

}

/////////////////////////////////////
message PB_ChatParam_EditMessage {
    string RoomKey = 1;
    int64 MessageId = 3;
    string NewText = 4;
}
message PB_ChatResponse_EditMessage {

}
////////////////////////////////////////////////////////

message PB_ChatParam_GetChatList {

}
message PB_ChatResponse_GetChatList {
    repeated PB_ChatView Chats = 1;
    repeated PB_UserView Users = 6;//dep
}

// GetChatHistoryToOlder
message PB_ChatParam_GetChatHistoryToOlder {
    string ChatKey = 1;
    int32 Limit = 2;
    int64 FromTopMessageId = 3;//can be
}
message PB_ChatResponse_GetChatHistoryToOlder {
    repeated PB_MessageView MessagesViews = 1 ;
    bool HasMore = 2;
}

////////////////////////////////////////////////////////
message PB_ChatParam_GetFreshAllDirectMessagesList {
    int64 LowMessageId = 1;
    int64 HighMessageId = 3;
}
message PB_ChatResponse_GetFreshAllDirectMessagesList {
    repeated PB_MessageView Messages = 1;
    bool HasMore = 2;
}
////////////////////////////////////////////////////////

service RPC_Chat {
    rpc AddNewMessage (PB_ChatParam_AddNewMessage) returns (PB_ChatResponse_AddNewMessage);
    rpc SetRoomActionDoing (PB_ChatParam_SetRoomActionDoing) returns (PB_ChatResponse_SetRoomActionDoing);
    rpc SetMessagesRangeAsSeen (PB_ChatParam_SetChatMessagesRangeAsSeen) returns (PB_ChatResponse_SetChatMessagesRangeAsSeen);
    rpc DeleteChatHistory (PB_ChatParam_DeleteChatHistory) returns (PB_ChatResponse_DeleteChatHistory);
    rpc DeleteMessagesByIds (PB_ChatParam_DeleteMessagesByIds) returns (PB_ChatResponse_DeleteMessagesByIds);
    rpc SetMessagesAsReceived (PB_ChatParam_SetMessagesAsReceived) returns (PB_ChatResponse_SetMessagesAsReceived);
    rpc EditMessage (PB_ChatParam_EditMessage) returns (PB_ChatResponse_EditMessage);
    rpc GetChatList (PB_ChatParam_GetChatList) returns (PB_ChatResponse_GetChatList);
    rpc GetChatHistoryToOlder (PB_ChatParam_GetChatHistoryToOlder) returns (PB_ChatResponse_GetChatHistoryToOlder);
    
    rpc GetFreshAllDirectMessagesList (PB_ChatParam_GetFreshAllDirectMessagesList) returns (PB_ChatResponse_GetFreshAllDirectMessagesList);
}

////////////////////////////////

/*message PB_MessageForwardedFrom {
    int64 RoomId = 1;
    RoomTypeEnum RoomTypeEnum = 2;
    int64 MessageId = 3;
    int32 MessageSeq = 4;
}

message PB_MessagesCollections {
    repeated int64 DirectMessagesIds = 10;
    repeated int64 GroupMessagesIds = 20;
    repeated int64 BroadCatMessagesIds = 21;
}
*/

