syntax = "proto3";

option java_package = "ir.ms.pb";
//option java_outer_classname = "PB2";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;

option go_package = "x";

import "pb_enums.proto";


message PB_OtherParam_Echo {
    string Text = 1;
}

message PB_OtherResponse_Echo {
    string Text = 1;
}


service RPC_Other {
    rpc Echo (PB_OtherParam_Echo) returns (PB_OtherResponse_Echo);

}

